--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: auto;
   background-color: white;
+  padding: 20px;
 }
 .wrapper {
   margin: auto;
@@ -12,7 +13,7 @@ body {
 header {
   grid-row: 1;
   grid-column: 1 / span 7;
-  border: 3px solid black;
+
   background-color: #99a880;
   border-radius: 3px;
   display: flex;
@@ -38,20 +39,19 @@ header .logo {
 main {
   grid-row: 5 / span 7;
   grid-column: 1 / span 7;
-  border: solid 3px green;
 }
-.splide {
-  grid-row: 2 / span 4;
-  grid-column: 1 / span 7;
-  border: solid 3px pink;
-  border-radius: 3px;
-}
+/* 
+.splide img {
+  width: 1000px;
+} */
 .info {
   display: flex;
   justify-content: space-around;
 }
+.info img {
+  width: 300px;
+}
 .om-mig {
-  border: solid 1px beige;
   border-radius: 3px;
   padding: 20px;
   margin: 10px;
@@ -59,7 +59,6 @@ main {
 }
 
 .sport-rehab {
-  border: solid 1px beige;
   border-radius: 3px;
   padding: 20px;
   margin: 10px;
@@ -67,7 +66,6 @@ main {
 }
 
 .kvinnor {
-  border: solid 1px beige;
   border-radius: 3px;
   padding: 20px;
   margin: 10px;
@@ -77,11 +75,11 @@ main {
 footer {
   grid-row: 8 span 9;
   grid-column: 1 / span 7;
-  border: solid 3px red;
   border-radius: 3px;
   background-color: #99a880;
   color: white;
 }
-img {
-  width: 300px;
+
+.my-very-nice-splide-img {
+  width: 100%;
 }
