--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: auto;
   background-color: white;
   padding: 20px;
+  font-family: "Poppins", sans-serif;
 }
 .wrapper {
   margin: auto;
