--- a/style.css
+++ b/style.css
@@ -6,9 +6,10 @@ body {
 }
 .wrapper {
   margin: auto;
-  padding: 20px;
+
   display: grid;
   grid-template-rows: repeat(9, auto);
+  grid-template-columns: repeat(7, auto);
 }
 
 header {
@@ -29,7 +30,8 @@ a {
   color: white;
 }
 header .logo {
-  width: 250px;
+  width: 20%;
+  min-width: 100px;
   padding: 10px;
   padding-left: 40px;
 }
@@ -42,7 +44,6 @@ header .logo {
 
 main {
   grid-row: 2 / span 6;
-  grid-column: 1 / span 7;
 }
 /* 
 .splide img {
@@ -56,6 +57,7 @@ main {
   height: 500px;
   object-fit: cover;
   object-position: 50% 25%;
+  width: 100%;
 }
 
 .rehab {
@@ -113,6 +115,23 @@ footer {
 li {
   list-style-type: none;
 }
-.my-very-nice-splide-img {
+.splide-img {
   width: 100%;
+}
+
+@media screen and (max-width: 900px) {
+  .nav {
+    flex-wrap: wrap;
+  }
+  .nav a {
+    padding: 10px;
+  }
+  .info {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 500px) {
+  .info {
+    flex-direction: column;
+  }
 }
